# aoc2024

./: .gitignore  meson.build
day1/: main.c  meson.build  solution.c  solution.h  test.c
